syntax = "proto3";

package com.opal.events.workflow;

import "google/protobuf/timestamp.proto";

// Event emitted when an entire workflow execution finishes
message WorkflowCompleted {
  // Schema version for backward compatibility tracking
  string schema_version = 1;

  // Unique event identifier for deduplication
  string event_id = 2;

  // Correlation ID for distributed tracing across services
  string correlation_id = 3;

  // Workflow execution identifier - serves as idempotency key
  string workflow_id = 4;

  // Session identifier from the original trigger request
  string session_id = 5;

  // Final workflow execution status
  enum WorkflowStatus {
    WORKFLOW_STATUS_UNSPECIFIED = 0;
    COMPLETED = 1;
    FAILED = 2;
    TIMEOUT = 3;
    CANCELLED = 4;
  }
  WorkflowStatus status = 6;

  // Number of agents that completed successfully
  int32 agents_completed = 7;

  // Number of agents that failed during execution
  optional int32 agents_failed = 8;

  // Total number of agents in the workflow
  int32 total_agents = 9;

  // Total workflow execution time in milliseconds
  int64 total_processing_time_ms = 10;

  // Workflow start timestamp
  google.protobuf.Timestamp start_timestamp = 11;

  // Workflow completion timestamp
  google.protobuf.Timestamp completion_timestamp = 12;

  // Summary of all agent executions in this workflow
  message AgentSummary {
    string agent_id = 1;
    string status = 2;
    optional int64 processing_time_ms = 3;
    optional string error_message = 4;
  }
  repeated AgentSummary agent_summary = 13;

  // Total number of recommendations generated by all agents
  optional int32 recommendations_generated = 14;

  // All data sources analyzed across agents
  repeated string data_sources_analyzed = 15;

  // Detailed error information if workflow failed
  optional string error_details = 16;

  // Client organization name
  optional string client_name = 17;

  // Source or user that initiated the workflow
  optional string triggered_by = 18;

  // Event timestamp
  google.protobuf.Timestamp timestamp = 19;

  // System that generated this event
  string source_system = 20;

  // Environment where the event occurred
  enum Environment {
    ENVIRONMENT_UNSPECIFIED = 0;
    DEVELOPMENT = 1;
    STAGING = 2;
    PRODUCTION = 3;
  }
  Environment environment = 21;
}